Fix overflow isssues and update project description in README.md

--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,14 @@
 /* TODO 3: Style calculator */
 .calculator {
     width: 520px;
-    height: 585px;
+    height: 590px;
     background-color: rgb(168, 168, 168);
     border: 1px solid black;
     border-radius: 8px;
     margin: 350px auto;
     padding-top: 25px;
+    padding-bottom: 10px;
+    overflow-y: auto;
 }
 
 .display {
@@ -25,11 +27,13 @@
     margin-bottom: 12px;
     margin-left: 30px;
     margin-right: 30px;
+    overflow-wrap: break-word;
 }
 
 #result {
     text-align: right;
     font-size: 30px;
+    margin-left: 10px;
     margin-right: 25px;
     direction: ltr;
 }
